Site message, whitespace fixes, remove RF game

--- a/redflags-web/src/main/resources/static/css/app.css
+++ b/redflags-web/src/main/resources/static/css/app.css
@@ -431,7 +431,7 @@ ul.menu li a:hover, ul.menu li.current a { color: white; opacity: 1.0; }
 	background-color: inherit !important;
 }
 
-.text-danger { color: #EA465F; }
+.text-danger, .text-danger:hover { color: #EA465F; }
 
 /* animations */
 
